src/app/components/thread/thread.component.scss
@import "../../../styles.scss";

.thread-container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    max-width: 485px;
    width: 100%;
    height: 100%;
    background-color: white;
    border-radius: 30px;
    border-left: 1px solid white;
    border-right: 1px solid white;
    overflow: hidden;

    .thread-header {
        width: 100%;
        display: flex;
        justify-content: space-between;
        align-items: center;
        padding: 25px 40px;
        border-radius: 30px 30px 0 0;
        box-shadow: 0px 2px 10px 0px rgb(0, 0, 0, 0.08);

        .thread-title-box {
            display: flex;
            align-items: center;
            gap: 5px;
            padding: 6px 10px;
            font-size: 24px;
            font-weight: 700;
            line-height: 32.74px;
            overflow: hidden;
            span {
                font-size: 14px;
                font-weight: 400;
                line-height: 19.1px;
                color: $purple-blue-bright;
                @include textOverflowSingle();
            }
        }

        .close-thread-btn {
            color: $grey;
            display: flex;
            align-items: center;
            justify-content: center;
            padding: 8px;

            span {
                font-size: 24px;
            }

            &:hover {
                color: $purple-blue-bright;
                background-color: $violet-bright;
                border-radius: 20px;
            }
        }
    }

    .thread-content {
        margin-top: 22px;
        width: inherit;
        height: 100%;
        overflow-y: auto;
        @include scrollbar();

        .thread-message {
            .antworten-separator {
                display: flex;
                align-items: center;
                gap: 20px;
                width: 100%;
                font-size: 18px;
                font-weight: 400;
                line-height: 24.55px;
                color: $purple-light;
                padding: 0 33px 0 33px;
                text-wrap: nowrap;

                &::after {
                    content: '';
                    display: inline-block;
                    width: 100%;
                    height: 1px;
                    background-color: $purple-light;
                }
            }
        }
    }

    app-message-box {
        width: 90%;
    }

}


@media screen and (max-width: 1200px) {
    .thread-container {
        right: 20px; 
        position: absolute;
        height: calc(100% - 25px);
        box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.2)
    }
    
}

@media screen and (max-width: 1000px) {
    .thread-container {
        max-width: 100%;
        height: calc(100% - 25px);
        left: 0;
        border-radius: unset;
        .thread-header{
            border-radius: unset;
        }
    }
    
}

@media screen and (max-width: 768px) {
    .thread-container {
        position: fixed;
        right: 0;
        max-width: none;
        width: 100%;
        height: calc(100% - 80px);
    }
}
   

